--- a/app/views/usuarios/novo_usuario.html
+++ b/app/views/usuarios/novo_usuario.html
@@ -12,15 +12,25 @@
             <div class="panel-body">
                 <div class="row">
                     <div class="col-lg-6">
-                        <form role="form">
+                        <form role="form" ng-submit="vm.registro()">
                             
                             <div class="form-group">
-                                <label>Status de controle do usuário</label>
-                                <input name="Status"class="form-control" placeholder="Descrição do Status">
+                                <label for="registro__nome">Nome Completo</label>
+                                <input type="text" class="form-control" id="registro__nome" placeholder="Charles Darwin" ng-model="vm.nome">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="registro__email">Email</label>
+                                <input type="email" class="form-control" id="registro__email" placeholder="meuemail@dominio.com.br" ng-model="vm.email">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="registro__password">Senha</label>
+                                <input type="password" class="form-control" id="registro__password" placeholder="minhasenha" ng-model="vm.password">
                             </div>
                             
-                            <button type="submit" class="btn btn-default">Submit Button</button>
-                            <button type="reset" class="btn btn-default">Reset Button</button>
+                            <button type="submit" class="btn btn-default">Cadastrar</button>
+                            <button type="reset" class="btn btn-default">Limpar</button>
                         </form>
                     </div>
                     <!-- /.col-lg-6 (nested) -->
