--- a/app/views/usuarios/novo_usuario.html
+++ b/app/views/usuarios/novo_usuario.html
@@ -1,112 +1,114 @@
 <div class="row">
-    <div class="col-lg-12">
-        <h1 class="page-header">Novo Usuário</h1>
-    </div>  
-    <!-- /.col-lg-12 -->
+	<div class="col-lg-12">
+		<h1 class="page-header">Novo Usuário</h1>
+	</div>  
+	<!-- /.col-lg-12 -->
 </div>
 <!-- /.row -->
 <div class="row">
-    <div class="col-lg-12">
-        <div class="panel panel-default">
-            
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <form role="form" ng-submit="vm.registro()">
-                            
-                            <div class="form-group">
-                                <label for="registro__nome">Nome Completo</label>
-                                <input type="text" class="form-control" id="registro__nome" placeholder="Charles Darwin" ng-model="vm.nome">
-                            </div>
+	<div class="col-lg-12">
+		<div class="panel panel-default">
 
-                            <div class="form-group">
-                                <label for="registro__email">Email</label>
-                                <input type="email" class="form-control" id="registro__email" placeholder="meuemail@dominio.com.br" ng-model="vm.email">
-                            </div>
+			<div class="panel-body">
+				<div class="row">
+					<div class="col-lg-6">
+						<form role="form" ng-submit="vm.registro()">
 
-                            <div class="form-group">
-                                <label for="registro__password">Senha</label>
-                                <input type="password" class="form-control" id="registro__password" placeholder="minhasenha" ng-model="vm.password">
-                            </div>
-                            
-                            <button type="submit" class="btn btn-default">Cadastrar</button>
-                            <button type="reset" class="btn btn-default">Limpar</button>
-                        </form>
-                    </div>
-                    <!-- /.col-lg-6 (nested) -->
-                    <div class="col-lg-6">
-                        <h1>Disabled Form States</h1>
-                        <form role="form">
-                            <fieldset disabled>
-                                <div class="form-group">
-                                    <label for="disabledSelect">Disabled input</label>
-                                    <input class="form-control" id="disabledInput" type="text" placeholder="Disabled input" disabled>
-                                </div>
-                                <div class="form-group">
-                                    <label for="disabledSelect">Disabled select menu</label>
-                                    <select id="disabledSelect" class="form-control">
-                                        <option>Disabled select</option>
-                                    </select>
-                                </div>
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox">Disabled Checkbox
-                                    </label>
-                                </div>
-                                <button type="submit" class="btn btn-primary">Disabled Button</button>
-                            </fieldset>
-                        </form>
-                        <h1>Form Validation States</h1>
-                        <form role="form">
-                            <div class="form-group has-success">
-                                <label class="control-label" for="inputSuccess">Input with success</label>
-                                <input type="text" class="form-control" id="inputSuccess">
-                            </div>
-                            <div class="form-group has-warning">
-                                <label class="control-label" for="inputWarning">Input with warning</label>
-                                <input type="text" class="form-control" id="inputWarning">
-                            </div>
-                            <div class="form-group has-error">
-                                <label class="control-label" for="inputError">Input with error</label>
-                                <input type="text" class="form-control" id="inputError">
-                            </div>
-                        </form>
-                        <h1>Input Groups</h1>
-                        <form role="form">
-                            <div class="form-group input-group">
-                                <span class="input-group-addon">@</span>
-                                <input type="text" class="form-control" placeholder="Username">
-                            </div>
-                            <div class="form-group input-group">
-                                <input type="text" class="form-control">
-                                <span class="input-group-addon">.00</span>
-                            </div>
-                            <div class="form-group input-group">
-                                <span class="input-group-addon"><i class="fa fa-eur"></i>
-                                </span>
-                                <input type="text" class="form-control" placeholder="Font Awesome Icon">
-                            </div>
-                            <div class="form-group input-group">
-                                <span class="input-group-addon">$</span>
-                                <input type="text" class="form-control">
-                                <span class="input-group-addon">.00</span>
-                            </div>
-                            <div class="form-group input-group">
-                                <input type="text" class="form-control">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button"><i class="fa fa-search"></i>
-                                    </button>
-                                </span>
-                            </div>
-                        </form>
-                    </div>
-                    <!-- /.col-lg-6 (nested) -->
-                </div>
-                <!-- /.row (nested) -->
-            </div>
-            <!-- /.panel-body -->
-        </div>
-        <!-- /.panel -->
-    </div>
-    <!-- /.col-lg-12 -->
-</div>
+							<div class="form-group">
+								<label for="registro__nome">Nome Completo</label>
+								<input type="text" class="form-control" id="registro__nome" placeholder="Charles Darwin" ng-model="vm.nome">
+								</div>
+
+								<div class="form-group">
+									<label for="registro__email">Email</label>
+									<input type="email" class="form-control" id="registro__email" placeholder="meuemail@dominio.com.br" ng-model="vm.email">
+									</div>
+
+									<div class="form-group">
+										<label for="registro__password">Senha</label>
+										<input type="password" class="form-control" id="registro__password" placeholder="minhasenha" ng-model="vm.password">
+										</div>
+
+										<button type="submit" class="btn btn-default">Cadastrar</button>
+										<button type="reset" class="btn btn-default">Limpar</button>
+									</form>
+								</div>
+								<!-- /.col-lg-6 (nested) -->
+								<div class="col-lg-6">
+									<h1>Disabled Form States</h1>
+									<form role="form">
+										<fieldset disabled>
+											<div class="form-group">
+												<label for="disabledSelect">Disabled input</label>
+												<input class="form-control" id="disabledInput" type="text" placeholder="Disabled input" disabled>
+												</div>
+												<div class="form-group">
+													<label for="disabledSelect">Disabled select menu</label>
+													<select id="disabledSelect" class="form-control">
+														<option>Disabled select</option>
+													</select>
+												</div>
+												<div class="checkbox">
+													<label>
+														<input type="checkbox">Disabled Checkbox
+														</label>
+													</div>
+													<button type="submit" class="btn btn-primary">Disabled Button</button>
+												</fieldset>
+											</form>
+											<h1>Form Validation States</h1>
+											<form role="form">
+												<div class="form-group has-success">
+													<label class="control-label" for="inputSuccess">Input with success</label>
+													<input type="text" class="form-control" id="inputSuccess">
+													</div>
+													<div class="form-group has-warning">
+														<label class="control-label" for="inputWarning">Input with warning</label>
+														<input type="text" class="form-control" id="inputWarning">
+														</div>
+														<div class="form-group has-error">
+															<label class="control-label" for="inputError">Input with error</label>
+															<input type="text" class="form-control" id="inputError">
+															</div>
+														</form>
+														<h1>Input Groups</h1>
+														<form role="form">
+															<div class="form-group input-group">
+																<span class="input-group-addon">@</span>
+																<input type="text" class="form-control" placeholder="Username">
+																</div>
+																<div class="form-group input-group">
+																	<input type="text" class="form-control">
+																		<span class="input-group-addon">.00</span>
+																	</div>
+																	<div class="form-group input-group">
+																		<span class="input-group-addon">
+																			<i class="fa fa-eur"/>
+																		</span>
+																		<input type="text" class="form-control" placeholder="Font Awesome Icon">
+																		</div>
+																		<div class="form-group input-group">
+																			<span class="input-group-addon">$</span>
+																			<input type="text" class="form-control">
+																				<span class="input-group-addon">.00</span>
+																			</div>
+																			<div class="form-group input-group">
+																				<input type="text" class="form-control">
+																					<span class="input-group-btn">
+																						<button class="btn btn-default" type="button">
+																							<i class="fa fa-search"/>
+																						</button>
+																					</span>
+																				</div>
+																			</form>
+																		</div>
+																		<!-- /.col-lg-6 (nested) -->
+																	</div>
+																	<!-- /.row (nested) -->
+																</div>
+																<!-- /.panel-body -->
+															</div>
+															<!-- /.panel -->
+														</div>
+														<!-- /.col-lg-12 -->
+													</div>
