--- a/app/views/pages/login.html
+++ b/app/views/pages/login.html
@@ -3,26 +3,39 @@
         <div class="col-md-4 col-md-offset-4">
             <div class="login-panel panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Please Sign In</h3>
+                    <h3 class="panel-title">Login do Sistema</h3>
                 </div>
                 <div class="panel-body">
-                    <form role="form">
+
+                    <form role="form" ng-submit="vm.login()">
                         <fieldset>
                             <div class="form-group">
-                                <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
+                                <input class="form-control" type="email" placeholder="seuemail@ufpr.br" id="login__email" ng-model="vm.email" autofocus>
                             </div>
                             <div class="form-group">
-                                <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                                <input class="form-control" id="login__password" type="password" value="" placeholder="Senha" ng-model="vm.password" >
                             </div>
                             <div class="checkbox">
                                 <label>
                                     <input name="remember" type="checkbox" value="Remember Me">Remember Me
                                 </label>
                             </div>
-                            <!-- Change this to a button or input when using this as a form -->
-                            <a ui-sref="dashboard.home" class="btn btn-lg btn-success btn-block">Login</a>
+                            <!-- Change this to a button or input when using this as a form 
+                                <a ui-sref="dashboard.home" >
+                                </a>
+
+                                <div class="form-group">
+                                <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
+                                
+                                <button type="submit" class="btn btn-default">Cadastrar</button>
+                            </div>
+                            -->            
+                            
+                            
                         </fieldset>
+                        <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
                     </form>
+
                 </div>
             </div>
         </div>
