--- a/app/views/projeto/projetos.html
+++ b/app/views/projeto/projetos.html
@@ -1,57 +1,126 @@
 <div class="row">
-    <div class="col-lg-12">
-        <h1 class="page-header"> Projetos</h1>
-    </div>  
-    <!-- /.col-lg-12 -->
+	<div class="col-lg-12">
+		<h1 class="page-header"> Projetos</h1>
+	</div>  
+	<!-- /.col-lg-12 -->
 </div>
 <!-- /.row -->
 <div class="row">
-    <div class="col-lg-12">
+	<div class="col-lg-12">
 		<div class="panel panel-default">
 			<div class="panel-heading">Meus Projetos</div>
-            <!-- /.panel-heading -->
-            <div class="panel-body">
-                <div class="table-responsive">
-                    <table class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th>Nome</th>
-                                <th>Descrição</th>
-                                <th>Instituição</th>
+			<!-- /.panel-heading -->
+			<div class="panel-body">
+				<div class="table-responsive">
+					<table class="table table-hover">
+						<thead>
+							<tr>
+								<th>Nome</th>
+								<th>Descrição</th>
+								<th>Instituição</th>
 								<th>Status</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td>Larry</td>
-                                <td>the Bird</td>
-                                <td>@twitter</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-				 <button class="btn btn-success btn-lg pull-right" type="button">
-<i class="fa fa-plus"></i> Adicionar Projeto
-</button>
-                <!-- /.table-responsive -->
-            </div>
-            <!-- /.panel-body -->
-        </div>
-            <!-- /.panel-body -->
-    </div>
-        <!-- /.panel -->
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>1</td>
+								<td>Mark</td>
+								<td>Otto</td>
+								<td>@mdo</td>
+							</tr>
+							<tr>
+								<td>2</td>
+								<td>Jacob</td>
+								<td>Thornton</td>
+								<td>@fat</td>
+							</tr>
+							<tr>
+								<td>3</td>
+								<td>Larry</td>
+								<td>the Bird</td>
+								<td>@twitter</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
+				<button class="btn btn-success btn-lg pull-right btn-sm" type="button" data-toggle="modal" data-target="#AddProjetoModal">
+					<i class="fa fa-plus"></i> Adicionar Projeto
+				</button>
+
+				
+				<!-- /.table-responsive -->
+			</div>
+			<!-- /.panel-body -->
+		</div>
+		<!-- /.panel-body -->
+	</div>
+	<!-- /.panel -->
 </div>
-    <!-- /.col-lg-12 -->
+<!-- /.col-lg-12 -->
+<div class="modal fade" id="AddProjetoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h4 class="modal-title" id="myModalLabel">Adicionar Projeto</h4>
+			</div>
+			<div class="modal-body">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						vlalvlalaslasad
+						<button class="btn btn-success btn-lg pull-right btn-sm" type="button" data-toggle="modal" data-target="#PickInstituicaoModal">
+							<i class="fa fa-plus"></i> Adicionar Instituicao
+						</button>
+					</div>
+					<div class="panel-body">
+						<button class="btn btn-success btn pull-right btn-sm btn-escolher" data-dismiss="modal" type="button">
+							<i class="fa fa-check" ></i> Adicionar
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- /.modal-content -->
+	</div>
+	<!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
+
+<div class="modal fade" id="PickInstituicaoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h4 class="modal-title" id="myModalLabel">Selecionar Instituição</h4>
+			</div>
+			<div class="modal-body">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<div class="panel-heading">
+						<form role="form" ng-submit="vm.add_instituicao()">
+						<label>Nome <input type="text" ng-model="vm.filtro_instituicao" /></label> 
+						<button class="btn btn-success btn-sm pull-right" type="submit">
+							<i class="fa fa-plus"></i> Adicionar
+						</button>
+						</div>
+					</form>
+					</div>
+					<div class="panel-body">
+						<ul class="list-group" ng-repeat="registro in vm.lista_instituicoes | filter:vm.filtro_instituicao">
+							<li class="list-group-item">
+								{{registro.nome}}
+								<button class="btn btn-success btn pull-right btn-sm btn-escolher" data-dismiss="modal" type="button">
+									<i class="fa fa-check" ></i> Escolher
+								</button>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- /.modal-content -->
+	</div>
+	<!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
