--- a/app/views/projeto/projetos.html
+++ b/app/views/projeto/projetos.html
@@ -57,27 +57,51 @@
 			<div class="modal-body">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<form role="form" ng-submit="vm.submit()">
+						<form role="form" ng-submit="projeto__form.$valid && vm.submit()" name="projeto__form" novalidate>
 							<div class="form-group"> 
                                 <label>Nome do Projeto</label>
-								<input type="text" class="form-control" id="projeto__nome" placeholder="Nome " ng-model="vm.nome">
+								<input type="text" class="form-control" id="projeto__nome" name="projeto__nome" placeholder="Nome " ng-model="vm.nome" required />
+								<small ng-show="projeto__form.projeto__nome.$error.required" class="text-danger">
+									Este campo é obrigatório
+								</small>
 							</div>
 							<div class="form-group">
 								<label>Descrição do Projeto</label>
-								<input type="text" class="form-control" id="projeto__descricao" placeholder="Descricao " ng-model="vm.descricao">
+								<input type="text" class="form-control" id="projeto__descricao" name="projeto__descricao" placeholder="Descricao " ng-model="vm.descricao" required />
+								<small ng-show="projeto__form.projeto__descricao.$error.required" class="text-danger">
+									Este campo é obrigatório
+								</small>
 							</div>
 							<div class="form-group">
 								<label>Instituição</label>
-								<input type="text" class="form-control" id="projeto__instituicao" ng-model="vm.instituicao.nome" disabled>
+								<input type="text" class="form-control" id="projeto__instituicao" name="projeto__instituicao" ng-model="vm.instituicao.nome" disabled required />
+								<small ng-show="projeto__form.projeto__instituicao.$error.required" class="text-danger">
+									Este campo é obrigatório
+								</small>
 							</div>
 							<div class="form-group">
-								<button class="btn btn-lg pull-right btn-sm" type="button" data-toggle="modal" data-target="#PickInstituicaoModal">
+								<button class="btn btn-success btn-sm" type="button" data-toggle="modal" data-target="#PickInstituicaoModal">
 									<i class="fa fa-plus"></i> Escolher Instituicao
 								</button>
 							</div>
-		
-							<button type="submit" class="btn btn-default" onclick="$('#AddProjetoModal').modal('hide')">Cadastrar</button>
-							<button type="reset" class="btn btn-default">Limpar</button>
+							<div class="form-group">
+								<label>Membros</label>
+								<ul class="list-unstyled" ng-repeat="registro in vm.membros_projeto">
+									<li>
+										{{registro.nome}}
+									</li>
+								</ul>
+							</div>
+							<div class="form-group">
+								<button class="btn btn-default btn-sm" type="button" data-toggle="modal" data-target="#EditMembrosModal">
+									<i class="fa fa-pencil "></i> Editar Membros
+								</button>
+							</div>
+							
+							<div class="btn-toolbar">
+								<button type="reset" class="btn btn-sm btn-danger pull-right" ng-click="vm.limpar_membros()">&nbsp;&nbsp;<i class="fa fa-times"></i> Limpar&nbsp;&nbsp;&nbsp;</button> 
+								<button type="submit" class="btn btn-sm btn-success pull-right" onclick="projeto__form.$valid && $('#AddProjetoModal').modal('hide')"><i class="fa fa-check"></i> Cadastrar</button>
+							</div>
 						</form>
 					</div>
 					
@@ -117,7 +141,57 @@
 									<i class="fa fa-check" ></i> Escolher
 								</button>
 							</li>
-						</ul>
+						</ul>	
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- /.modal-content -->
+	</div>
+	<!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
+
+<div class="modal fade" id="EditMembrosModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h4 class="modal-title" id="myModalLabel">Editar Membros</h4>
+			</div>
+			<div class="modal-body">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<label>Membros atuais</label>
+					<ul class="list-unstyled" ng-repeat="registro in vm.membros_projeto">
+						<li>
+							<button class="btn btn-danger btn-xs" type="submit" ng-click="vm.remove(registro)">
+								<i class="fa fa-times" ></i>
+							</button>
+							{{registro.nome}}
+						</li>
+					</ul>
+					</div>
+					<div class="panel-body">
+						<form role="form">
+							<label>Buscar <input type="text" ng-model="vm.filtro_membro" /></label> 
+						</form>
+					</div>
+					<div class="panel-body">
+						<div class="form-group">
+							<ul class="list-unstyled" ng-repeat="registro in vm.lista_usuarios | filter:vm.filtro_membro">
+								<li>
+									<button class="btn btn-success btn-xs" type="submit" ng-click="vm.add_membro(registro)">
+										<i class="fa fa-plus" ></i>
+									</button>
+									{{registro.nome}}
+								</li>
+							</ul>
+						</div>
+						<div class="btn-toolbar">
+							<button type="submit" class="btn btn-sm btn-danger pull-right" ng-click="vm.limpar_membros()">&nbsp;&nbsp;<i class="fa fa-times"></i> Limpar&nbsp;&nbsp;&nbsp;</button> 
+							<button type="submit" class="btn btn-sm btn-success pull-right" onclick="$('#EditMembrosModal').modal('hide')"><i class="fa fa-check"></i> Finalizar Edição</button>
+						</div>
 					</div>
 				</div>
 			</div>
